hphp/hack/test/typecheck/like_types/dynamic_coercion/like_decl_types/tgeneric.php.exp
File "tgeneric.php", line 5, characters 10-11:
Invalid return type (Typing[4110])
File "tgeneric.php", line 4, characters 37-42:
Expected Terase
File "tgeneric.php", line 4, characters 24-30:
But got dynamic
File "tgeneric.php", line 9, characters 10-11:
Invalid return type (Typing[4110])
File "tgeneric.php", line 8, characters 43-48:
Expected Treify
File "tgeneric.php", line 8, characters 30-36:
But got dynamic
